syntax = "proto3";

package usersPackage;

service Users {
   rpc Login (LoginRequest) returns (LoginResponse) {}
   rpc Signup (SignupRequest) returns (SignupResponse) {}
   rpc ListTransactions (ListTransactionsRequest) returns (ListTransactionsResponse) {}
}

message LoginRequest {
   string email = 1;
   string password = 2;
}

message LoginResponse {
   string token = 1;
}

message SignupRequest {
   string email = 1;
   string password = 2;
   string username = 3;
   string iban = 4;
}

message SignupResponse {
   
}

message ListTransactionsRequest {
   string userId = 1;
}

message Transaction {
   double usdDelta = 1;
   double eurDelta = 2;
   string timestamp = 3;
}

message ListTransactionsResponse {
   repeated Transaction transactions = 1;
}